# ai_product_hackathon

./: .gitignore  README.md  YandexGPT_API.py  database_operating.py  func_test.ipynb  news_processing.py  pyproject.toml  rag_find_similar.ipynb  rag_test.ipynb  summary_test.ipynb
